--- a/OpPlan4VSWebTestExport.csproj
+++ b/OpPlan4VSWebTestExport.csproj
@@ -202,6 +202,7 @@
   <ItemGroup>
     <None Include="Nugetpack.cmd" />
     <None Include="OpPlan4VSWebTestExport.nuspec" />
+    <None Include="Readme.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
