Legger ved binaries

--- a/OpPlan4VSWebTestExport.csproj
+++ b/OpPlan4VSWebTestExport.csproj
@@ -195,14 +195,19 @@
     <Resource Include="castle.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Binaries\Fiddler.exe" />
+    <Content Include="Binaries\OpPlan4VSWebTestExport.dll" />
+    <Content Include="Binaries\OpPlan4VSWebTestExport.pdb" />
     <Content Include="Fiddler\Fiddler.exe" />
     <Content Include="Nuget\nuget.exe" />
     <Content Include="Solution Items\README.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Binaries\Readme.md" />
     <None Include="Nugetpack.cmd" />
     <None Include="OpPlan4VSWebTestExport.nuspec" />
     <None Include="Readme.md" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
